- Fixed the pokemon profile, missing the horizontal scrollbar

--- a/pokedex-project/src/app/pokemons/pokemon/poke-evolutions/poke-evolution.component.css
+++ b/pokedex-project/src/app/pokemons/pokemon/poke-evolutions/poke-evolution.component.css
@@ -4,6 +4,7 @@
 
 fa-icon {
   top: 45%;
+  left: 97%;
 }
 
 /*# sourceMappingURL=poke-evolution.component.css.map */
